--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
+    "react-flip-move": "^3.0.5"
   },
   "scripts": {
     "start": "node backend/server.js",
