--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
+    "react-flip-move": "^3.0.5"
   },
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "client": "cd netflix-app && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
   },
   "author": "",
