--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "morgan": "^1.10.0",
-    "react-flip-move": "^3.0.5"
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "node backend/server.js",
